--- a/Dibujar.html
+++ b/Dibujar.html
@@ -27,16 +27,37 @@
         #controls input[type="number"] {
             width: 60px;
         }
-        #clear {
+        #moveControls {
+            display: flex;
+            align-items: center;
+        }
+        #moveControls input[type="number"] {
+            width: 80px;
+        }
+        #clear, #eraser, #select {
             padding: 5px 15px;
-            background-color: #d9534f;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
+        #clear {
+            background-color: #d9534f;
+        }
         #clear:hover {
             background-color: #c9302c;
+        }
+        #eraser {
+            background-color: #5bc0de;
+        }
+        #eraser:hover {
+            background-color: #31b0d5;
+        }
+        #select {
+            background-color: #5bc0de;
+        }
+        #select:hover {
+            background-color: #31b0d5;
         }
         canvas {
             border: 2px solid #333;
@@ -71,6 +92,16 @@
         <input type="color" id="strokeColor" value="#000000">
 
         <button id="clear">Limpiar Canvas</button>
+        <button id="eraser">Borrador</button>
+        <button id="select">Seleccionar</button>
+
+        <div id="moveControls">
+            <label for="moveX">Mover X:</label>
+            <input type="number" id="moveX" value="0" step="1">
+
+            <label for="moveY">Mover Y:</label>
+            <input type="number" id="moveY" value="0" step="1">
+        </div>
     </div>
 
     <canvas id="canvas" width="800" height="600"></canvas>
@@ -84,12 +115,193 @@
         const fillColorInput = document.getElementById('fillColor');
         const strokeColorInput = document.getElementById('strokeColor');
         const clearButton = document.getElementById('clear');
+        const eraserButton = document.getElementById('eraser');
+        const selectButton = document.getElementById('select');
+        const moveXInput = document.getElementById('moveX');
+        const moveYInput = document.getElementById('moveY');
 
         let currentShape = 'rectangle';
         let shapes = [];
+        let isEraserMode = false;
+        let isSelectMode = false;
+        let selectedShape = null;
 
-        shapeSelect.addEventListener('change', (e) => {
-            currentShape = e.target.value;
+        function drawPreview(x, y, scale, rotation) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawShapes();
+
+            const fillColor = fillColorInput.value;
+            const strokeColor = strokeColorInput.value;
+
+            ctx.save();
+            ctx.globalAlpha = 0.3; // Establecer opacidad para la previsualización
+            ctx.translate(x, y);
+            ctx.rotate(rotation);
+            ctx.scale(scale, scale);
+
+            ctx.fillStyle = fillColor;
+            ctx.strokeStyle = strokeColor;
+
+            ctx.beginPath();
+            if (currentShape === 'rectangle') {
+                ctx.rect(-50, -25, 100, 50);
+            } else if (currentShape === 'circle') {
+                ctx.arc(0, 0, 50, 0, Math.PI * 2);
+            } else if (currentShape === 'triangle') {
+                ctx.moveTo(0, -50);
+                ctx.lineTo(50, 50);
+                ctx.lineTo(-50, 50);
+                ctx.closePath();
+            } else if (currentShape === 'star') {
+                const size = 50;
+                const points = 5;
+                const outerRadius = size;
+                const innerRadius = size / 2;
+                const angle = Math.PI / points;
+                for (let i = 0; i < 2 * points; i++) {
+                    const r = i % 2 === 0 ? outerRadius : innerRadius;
+                    const theta = i * angle;
+                    ctx.lineTo(r * Math.cos(theta), r * Math.sin(theta));
+                }
+                ctx.closePath();
+            }
+            ctx.fill();
+            ctx.stroke();
+            ctx.restore();
+        }
+
+        function eraseShape(x, y) {
+            shapes = shapes.filter(shape => {
+                ctx.save();
+                ctx.translate(shape.x, shape.y);
+                ctx.rotate(shape.rotation);
+                ctx.scale(shape.scale, shape.scale);
+                ctx.beginPath();
+                if (shape.type === 'rectangle') {
+                    ctx.rect(-shape.width / 2, -shape.height / 2, shape.width, shape.height);
+                } else if (shape.type === 'circle') {
+                    ctx.arc(0, 0, shape.radius, 0, Math.PI * 2);
+                } else if (shape.type === 'triangle') {
+                    ctx.moveTo(0, -shape.size / 2);
+                    ctx.lineTo(shape.size / 2, shape.size / 2);
+                    ctx.lineTo(-shape.size / 2, shape.size / 2);
+                    ctx.closePath();
+                } else if (shape.type === 'star') {
+                    const outerRadius = shape.size / 2;
+                    const innerRadius = shape.size / 4;
+                    const angle = Math.PI / shape.points;
+                    for (let i = 0; i < 2 * shape.points; i++) {
+                        const r = i % 2 === 0 ? outerRadius : innerRadius;
+                        const theta = i * angle;
+                        ctx.lineTo(r * Math.cos(theta), r * Math.sin(theta));
+                    }
+                    ctx.closePath();
+                }
+                ctx.restore();
+
+                return !ctx.isPointInPath(x, y);
+            });
+            drawShapes();
+        }
+
+        function selectShape(x, y) {
+            selectedShape = shapes.find(shape => {
+                ctx.save();
+                ctx.translate(shape.x, shape.y);
+                ctx.rotate(shape.rotation);
+                ctx.scale(shape.scale, shape.scale);
+                ctx.beginPath();
+                if (shape.type === 'rectangle') {
+                    ctx.rect(-shape.width / 2, -shape.height / 2, shape.width, shape.height);
+                } else if (shape.type === 'circle') {
+                    ctx.arc(0, 0, shape.radius, 0, Math.PI * 2);
+                } else if (shape.type === 'triangle') {
+                    ctx.moveTo(0, -shape.size / 2);
+                    ctx.lineTo(shape.size / 2, shape.size / 2);
+                    ctx.lineTo(-shape.size / 2, shape.size / 2);
+                    ctx.closePath();
+                } else if (shape.type === 'star') {
+                    const outerRadius = shape.size / 2;
+                    const innerRadius = shape.size / 4;
+                    const angle = Math.PI / shape.points;
+                    for (let i = 0; i < 2 * shape.points; i++) {
+                        const r = i % 2 === 0 ? outerRadius : innerRadius;
+                        const theta = i * angle;
+                        ctx.lineTo(r * Math.cos(theta), r * Math.sin(theta));
+                    }
+                    ctx.closePath();
+                }
+                ctx.restore();
+
+                return ctx.isPointInPath(x, y);
+            });
+            if (selectedShape) {
+                moveXInput.value = selectedShape.x;
+                moveYInput.value = selectedShape.y;
+            }
+        }
+
+        function moveSelectedShape(x, y) {
+            if (selectedShape) {
+                selectedShape.x = x;
+                selectedShape.y = y;
+                moveXInput.value = x;
+                moveYInput.value = y;
+                drawShapes();
+            }
+        }
+
+        function drawShapes() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            shapes.forEach(shape => {
+                ctx.save();
+                ctx.translate(shape.x, shape.y);
+                ctx.rotate(shape.rotation);
+                ctx.scale(shape.scale, shape.scale);
+                ctx.fillStyle = shape.fillColor;
+                ctx.strokeStyle = shape.strokeColor;
+                ctx.lineWidth = 2;
+
+                ctx.beginPath();
+                if (shape.type === 'rectangle') {
+                    ctx.rect(-shape.width / 2, -shape.height / 2, shape.width, shape.height);
+                } else if (shape.type === 'circle') {
+                    ctx.arc(0, 0, shape.radius, 0, Math.PI * 2);
+                } else if (shape.type === 'triangle') {
+                    ctx.moveTo(0, -shape.size / 2);
+                    ctx.lineTo(shape.size / 2, shape.size / 2);
+                    ctx.lineTo(-shape.size / 2, shape.size / 2);
+                    ctx.closePath();
+                } else if (shape.type === 'star') {
+                    const outerRadius = shape.size / 2;
+                    const innerRadius = shape.size / 4;
+                    const angle = Math.PI / shape.points;
+                    for (let i = 0; i < 2 * shape.points; i++) {
+                        const r = i % 2 === 0 ? outerRadius : innerRadius;
+                        const theta = i * angle;
+                        ctx.lineTo(r * Math.cos(theta), r * Math.sin(theta));
+                    }
+                    ctx.closePath();
+                }
+                ctx.fill();
+                ctx.stroke();
+                ctx.restore();
+            });
+        }
+
+        canvas.addEventListener('mousemove', (e) => {
+            const rect = canvas.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+
+            if (isEraserMode) {
+                canvas.style.cursor = `url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" fill="%23d9534f" fill-opacity="0.3" stroke="%23d9534f" stroke-width="2" /></svg>') 10 10, auto`;
+            } else if (isSelectMode) {
+                canvas.style.cursor = 'move';
+            } else {
+                drawPreview(x, y, parseFloat(scaleInput.value), parseFloat(rotationInput.value) * (Math.PI / 180));
+                canvas.style.cursor = 'default';
+            }
         });
 
         canvas.addEventListener('click', (e) => {
@@ -97,118 +309,78 @@
             const x = e.clientX - rect.left;
             const y = e.clientY - rect.top;
 
-            const scale = parseFloat(scaleInput.value);
-            const rotation = parseFloat(rotationInput.value) * (Math.PI / 180);
-            const fillColor = fillColorInput.value;
-            const strokeColor = strokeColorInput.value;
-
-            let shape = { type: currentShape, x, y, scale, rotation, fillColor, strokeColor };
-
-            if (currentShape === 'rectangle') {
-                shape.width = 100;
-                shape.height = 50;
-            } else if (currentShape === 'circle') {
-                shape.radius = 50;
-            } else if (currentShape === 'triangle') {
-                shape.size = 100;
-            } else if (currentShape === 'star') {
-                shape.size = 100;
-                shape.points = 5;
-            }
-
-            shapes.push(shape);
-            drawShapes();
-        });
-
-        function traslacion(shape) {
-            ctx.translate(shape.x, shape.y);
-        }
-
-        function escalado(shape) {
-            ctx.scale(shape.scale, shape.scale);
-        }
-
-        function rotacion(shape) {
-            ctx.rotate(shape.rotation);
-        }
-
-        function dibujarRectangulo(width, height) {
-            ctx.beginPath();
-            ctx.moveTo(-width / 2, -height / 2);
-            ctx.lineTo(width / 2, -height / 2);
-            ctx.lineTo(width / 2, height / 2);
-            ctx.lineTo(-width / 2, height / 2);
-            ctx.closePath();
-            ctx.fill();
-            ctx.stroke();
-        }
-
-        function dibujarCirculo(radius) {
-            ctx.beginPath();
-            ctx.arc(0, 0, radius, 0, Math.PI * 2);
-            ctx.fill();
-            ctx.stroke();
-        }
-
-        function dibujarTriangulo(size) {
-            ctx.beginPath();
-            ctx.moveTo(0, -size / 2);
-            ctx.lineTo(size / 2, size / 2);
-            ctx.lineTo(-size / 2, size / 2);
-            ctx.closePath();
-            ctx.fill();
-            ctx.stroke();
-        }
-
-        function dibujarEstrella(size, points) {
-            const outerRadius = size / 2;
-            const innerRadius = size / 4;
-            const angle = Math.PI / points;
-
-            ctx.beginPath();
-            for (let i = 0; i < 2 * points; i++) {
-                const radius = i % 2 === 0 ? outerRadius : innerRadius;
-                const x = radius * Math.sin(i * angle);
-                const y = -radius * Math.cos(i * angle);
-                ctx.lineTo(x, y);
-            }
-            ctx.closePath();
-            ctx.fill();
-            ctx.stroke();
-        }
-
-        function drawShapes() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            shapes.forEach((shape) => {
-                ctx.save();
-
-                traslacion(shape);
-                rotacion(shape);
-                escalado(shape);
-
-                ctx.fillStyle = shape.fillColor;
-                ctx.strokeStyle = shape.strokeColor;
+            if (isEraserMode) {
+                eraseShape(x, y);
+            } else if (isSelectMode) {
+                selectShape(x, y);
+            } else if (selectedShape) {
+                moveSelectedShape(x, y);
+            } else {
+                const scale = parseFloat(scaleInput.value);
+                const rotation = parseFloat(rotationInput.value) * (Math.PI / 180);
+                const shape = {
+                    type: currentShape,
+                    x: x,
+                    y: y,
+                    scale: scale,
+                    rotation: rotation,
+                    fillColor: fillColorInput.value,
+                    strokeColor: strokeColorInput.value
+                };
 
                 if (shape.type === 'rectangle') {
-                    dibujarRectangulo(shape.width, shape.height);
+                    shape.width = 100;
+                    shape.height = 50;
                 } else if (shape.type === 'circle') {
-                    dibujarCirculo(shape.radius);
+                    shape.radius = 50;
                 } else if (shape.type === 'triangle') {
-                    dibujarTriangulo(shape.size);
+                    shape.size = 100;
                 } else if (shape.type === 'star') {
-                    dibujarEstrella(shape.size, shape.points);
+                    shape.size = 100;
+                    shape.points = 5;
                 }
 
-                ctx.restore();
-            });
-        }
+                shapes.push(shape);
+                drawShapes();
+            }
+        });
 
         clearButton.addEventListener('click', () => {
             shapes = [];
             drawShapes();
         });
+
+        eraserButton.addEventListener('click', () => {
+            isEraserMode = !isEraserMode;
+            isSelectMode = false;
+        });
+
+        selectButton.addEventListener('click', () => {
+            isSelectMode = !isSelectMode;
+            isEraserMode = false;
+        });
+
+        moveXInput.addEventListener('input', () => {
+            if (selectedShape) {
+                selectedShape.x = parseFloat(moveXInput.value);
+                drawShapes();
+            }
+        });
+
+        moveYInput.addEventListener('input', () => {
+            if (selectedShape) {
+                selectedShape.y = parseFloat(moveYInput.value);
+                drawShapes();
+            }
+        });
+
+        shapeSelect.addEventListener('change', () => {
+            currentShape = shapeSelect.value;
+        });
     </script>
 </body>
 </html>
+
+
 
 
